crates/fe/tests/fixtures/cli_output/ingots/duplicate_toml_keys/duplicate_toml_keys_tree.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 528
expression: output
---
=== STDOUT ===
[invalid fe.toml]

=== STDERR ===
Error: Invalid fe.toml in ingot file://<project>/crates/fe/tests/fixtures/cli_output/ingots/duplicate_toml_keys/: Failed to parse file://<project>/crates/fe/tests/fixtures/cli_output/ingots/duplicate_toml_keys/fe.toml: TOML parse error at line 3, column 1
  |
3 | name = "duplicate"
  | ^
duplicate key `name` in table `ingot`

Error: Failed to parse file://<project>/crates/fe/tests/fixtures/cli_output/ingots/duplicate_toml_keys/fe.toml: TOML parse error at line 3, column 1
  |
3 | name = "duplicate"
  | ^
duplicate key `name` in table `ingot`


=== EXIT CODE: 1 ===
